--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1;url= https://mm.wentianplay.com/ ">
+<meta http-equiv="refresh" content="1;url= https://g.wentianplay.com/ ">
